examples/error/arrays.muse
//// test 1 - invalid index
var test1_array = [0, 1, 2, 3];
var test1 = test1_array[8];